removed trailing comma from firebase.json

--- a/preview/firebase.json
+++ b/preview/firebase.json
@@ -7,7 +7,7 @@
       "**/node_modules/**"
     ],
     "cleanUrls": true,
-    "trailingSlash": false,
+    "trailingSlash": false
   },
   "database": {
     "rules": "database.rules.json"
