--- a/development/firebase.json
+++ b/development/firebase.json
@@ -8,7 +8,7 @@
       "**/node_modules/**"
     ],
     "cleanUrls": true,
-    "trailingSlash": false,
+    "trailingSlash": false
   },
   "database": [
     {
