--- a/development/firebase.json
+++ b/development/firebase.json
@@ -8,7 +8,14 @@
       "**/node_modules/**"
     ],
     "cleanUrls": true,
-    "trailingSlash": false
+    "trailingSlash": false,
+    "redirects": [
+      {
+        "source": "/",
+        "destination": "/index",
+        "type": 301
+      }
+    ]
   },
   "database": [
     {
