--- a/development/firebase.json
+++ b/development/firebase.json
@@ -12,7 +12,7 @@
     "redirects": [
       {
         "source": "/",
-        "destination": "/index",
+        "destination": "/home",
         "type": 301
       }
     ]
